# cityuur_gui_main_ros2_test

cityuur_gui/: CMakeLists.txt  Dockerfile  README.md  entry_point.sh  package.xml  plugin.xml  setup.py
cityuur_gui/include/cityuur_gui/: my_plugin.h
cityuur_gui/resource/: my_plugin.ui
cityuur_gui/scripts/: cityuur_gui
cityuur_gui/src/cityuur_gui/: my_plugin.cpp
