<?xml version="1.0"?>
<package format="3">
  <name>cityuur_gui</name>
  <version>0.0.0</version>
  <description>The cityuur_gui package</description>

  <maintainer email="jacky@todo.todo">jacky</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>curos_msgs</depend>    
  <depend>rclcpp</depend>
  <depend>rqt_gui</depend>
  <depend>rqt_gui_cpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>

  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
